--- a/templates/index.html
+++ b/templates/index.html
@@ -1,1 +1,10 @@
-<h2>Wealth Management</h2>
+<header>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="{{url_for('static', filename='styles.css')}}">
+</header>
+
+<body>
+    <div class="container">
+        <h2>Wealth Management</h2>
+    </div>
+</body>
