--- a/templates/main.html
+++ b/templates/main.html
@@ -5,8 +5,8 @@
 
 <body>
     <div class="container">
-        <h2>Main Menu</h2>
-        <form action="/" method="post">
+        <h2>Main</h2>
+        <form action="/genAI" method="post">
             <p><input type="submit" value="genAI"></p>
         </form>
         <form action="/SA" method="post">
